fix stream width
This fixes a bug where stream text body is not fully expanded when stream title is too short.

--- a/src/main/webapp/static/sc2.css
+++ b/src/main/webapp/static/sc2.css
@@ -1425,6 +1425,7 @@ body.modal-open.modal-open-no-popup
 {
     min-width: 0;
     flex-shrink: 99;
+    width: 100%;
 }
 
 .stream header
